@@ -127,81 +127,6 @@ class TextTemplateRendererTests(Base, unittest.TestCase):
         self.assertTrue(isinstance(result, binary_type))
         self.assertEqual(result, b'Hello.\n')
 
-class RenderTemplateTests(Base, unittest.TestCase):
-    def _callFUT(self, name, **kw):
-        from pyramid.chameleon_text import render_template
-        return render_template(name, **kw)
-
-    @skip_on('java')
-    def test_it(self):
-        minimal = self._getTemplatePath('minimal.txt')
-        result = self._callFUT(minimal)
-        self.assertTrue(isinstance(result, binary_type))
-        self.assertEqual(result, b'Hello.\n')
-
-class RenderTemplateToResponseTests(Base, unittest.TestCase):
-    def _callFUT(self, name, **kw):
-        from pyramid.chameleon_text import render_template_to_response
-        return render_template_to_response(name, **kw)
-
-    @skip_on('java')
-    def test_minimal(self):
-        minimal = self._getTemplatePath('minimal.txt')
-        result = self._callFUT(minimal)
-        from webob import Response
-        self.assertTrue(isinstance(result, Response))
-        self.assertEqual(result.app_iter, [b'Hello.\n'])
-        self.assertEqual(result.status, '200 OK')
-        self.assertEqual(len(result.headerlist), 2)
-
-    @skip_on('java')
-    def test_iresponsefactory_override(self):
-        from webob import Response
-        class Response2(Response):
-            pass
-        from pyramid.interfaces import IResponseFactory
-        self._registerUtility(Response2, IResponseFactory)
-        minimal = self._getTemplatePath('minimal.txt')
-        result = self._callFUT(minimal)
-        self.assertTrue(isinstance(result, Response2))
-
-class GetRendererTests(Base, unittest.TestCase):
-    def _callFUT(self, name):
-        from pyramid.chameleon_text import get_renderer
-        return get_renderer(name)
-
-    @skip_on('java')
-    def test_it(self):
-        from pyramid.interfaces import IRendererFactory
-        class Dummy:
-            template = object()
-            def implementation(self): pass
-        renderer = Dummy()
-        def rf(spec):
-            return renderer
-        self._registerUtility(rf, IRendererFactory, name='foo')
-        result = self._callFUT('foo')
-        self.assertTrue(result is renderer)
-
-class GetTemplateTests(Base, unittest.TestCase):
-    def _callFUT(self, name):
-        from pyramid.chameleon_text import get_template
-        return get_template(name)
-
-    @skip_on('java')
-    def test_it(self):
-        from pyramid.interfaces import IRendererFactory
-        class Dummy:
-            template = object()
-            def implementation(self):
-                return self.template
-        renderer = Dummy()
-        def rf(spec):
-            return renderer
-        self._registerUtility(rf, IRendererFactory, name='foo')
-        result = self._callFUT('foo')
-        self.assertTrue(result is renderer.template)
-
 class DummyLookup(object):
     auto_reload=True
     debug = True
